setup separate maven profiles for benchmarks