@@ -312,6 +312,54 @@
             </build>
         </profile>
         <profile>
+            <id>java7-benchmark</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <runOrder>hourly</runOrder>
+                            <forkMode>always</forkMode>
+                            <argLine>-server -verbose:gc -Xloggc:gc.log -XX:+PrintGCTimeStamps
+                                -XX:+HeapDumpOnOutOfMemoryError -ea -server -XX:+TieredCompilation -XX:+UseNUMA
+                                -XX:+UseCondCardMark -XX:-UseBiasedLocking -XX:+UseTLAB -XX:+DoEscapeAnalysis</argLine>
+                            <includes>
+                                <include>**/*PerformanceTest.java</include>
+                            </includes>
+                            <excludes>
+                                <exclude>**/*Test</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>java6-benchmark</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <runOrder>hourly</runOrder>
+                            <forkMode>always</forkMode>
+                            <argLine>-server -verbose:gc -Xloggc:gc.log -XX:+PrintGCTimeStamps
+                                -XX:+HeapDumpOnOutOfMemoryError -ea -server -XX:+TieredCompilation -XX:+UseNUMA
+                                -XX:-UseBiasedLocking -XX:+UseTLAB -XX:+DoEscapeAnalysis</argLine>
+                            <includes>
+                                <include>**/*PerformanceTest.java</include>
+                            </includes>
+                            <excludes>
+                                <exclude>**/*Test</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>release</id>
             <modules>
                 <module>collections</module>
